--- a/tango/templates/home.html
+++ b/tango/templates/home.html
@@ -1,6 +1,5 @@
-{% extends "layout.html" %}
+{% extends "layouts/main.html" %}
 {% block title %}Test Page{% endblock %}
-{% block sectionHeader %}Welcome{% endblock %}
 
 {% block header %}
 <h1>This is the top of the page</h1>
