--- a/tango/templates/login.html
+++ b/tango/templates/login.html
@@ -1,62 +1,52 @@
-{% extends "layout.html" %}
+{% extends "layouts/main.html" %}
 {% block title %}Login{% endblock %}
-{% block sectionHeader %}Account{% endblock %}
-
-{% block header %}
-    <h1 class="title h4">Sign in</h1>
-    <p class="subtitle">Enter your login details</p>
-{% endblock %}
 
 {% block content %}
-    <section>
 
-        <form action="" method="post" novalidate class="form-horizontal small">
-            {{ form.hidden_tag() }}
-            <section class="form-group {{ 'has-error' if form.email.errors else '' }}">
-                <div class="col-3 col-sm-12">
-                    {{ form.email.label(class="form-label") }}
-                </div>
-                <div class="col-9 col-sm-12">
-                    {{ form.email(class="form-input") }}
-                    {% for error in form.email.errors %}
-                        <p class="form-input-hint">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            </section>
+            <h1>Login</h1>
 
-            <section class="form-group {{ 'has-error' if form.password.errors else '' }}">
-                <div class="col-3 col-sm-12">
-                    {{ form.password.label(class="form-label") }}
-                </div>
-                <div class="col-9 col-sm-12">
-                    {{ form.password(class="form-input") }}
-                    {% for error in form.password.errors %}
-                        <p class="form-input-hint">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            </section>
+            <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+                <section class="is-row form-item">
+                    <div class="is-col is-30">
+                        {{ form.email.label(class="is-big") }}
+                    </div>
+                    <div class="is-col is-70">
+                        {{ form.email(class="is-error" if form.email.errors) }}
+                        {% for error in form.email.errors %}
+                            <div class="is-error">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                </section>
 
-            <section class="form-group">
-                <div class="col-3 col-sm-12">
-                </div>
-                <div class="col-9 col-sm-12">
-                    <label class="form-checkbox">
-                        {{ form.remember_me() }}
-                        <i class="form-icon"></i>
-                        {{ form.remember_me.label() }}
-                    </label>
-                </div>
-            </section>
+                <section class="is-row form-item">
+                    <div class="is-col is-30">
+                        {{ form.password.label(class="is-big") }}
+                    </div>
+                    <div class="is-col is-70">
+                        {{ form.password(class="is-error" if form.password.errors) }}
+                        {% for error in form.password.errors %}
+                            <div class="is-error">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                </section>
 
-            <section class="form-group">
-                <div class="col-3 col-sm-12">
-                </div>
-                <div class="col-9 col-sm-12">
-                    {{ form.submit(class="btn btn-solid") }}
-                </div>
-            </section>
+                <section class="is-row form-item">
+                    <div class="is-col is-30">
+                    </div>
+                    <div class="is-col is-70">
+                        <label class="is-checkbox">
+                            {{ form.remember_me }}
+                            Remember me
+                        </label>
+                    </div>
+                </section>
 
-        </form>
+                <section class="form-item">
+                    {{ form.submit(class="button is-secondary") }}
+                    <a href="#" class="button is-tertiary">I've forgotten my password</a>
+                </section>
 
-    </section>
+            </form>
+
 {% endblock %}
