--- a/tango/templates/register/start.html
+++ b/tango/templates/register/start.html
@@ -8,12 +8,24 @@
         <h1>Volunteer for the Labour Party</h1>
         <p>
             We're glad you're interested in getting involved with the Labour Party in your area.
-            Whether you're a member or just interested in helping out, we use this website to organise
-            our campaign events and activists.
+            Whether you're a member already or just interested in helping out, thank you.
         </p>
+    </section>
+
+    <section class="is-box">
+    <p>
+        This can take up as much or as little time as you want. We normally deliver leaflets,
+        knock on doors, or talk to people at events like a street stall.
+    </p>
+    <p>
+        You should expect it to take up roughly 3 hours a fortnight.
+    </p>
+    </section>
+
+    <section>
         <p>
-            Click <strong>Start</strong> to tell us who are are and what you can do, and we'll be in touch. Before that
-            though, here are some things you should be aware of:
+            Click <strong>Start</strong> to sign up to volunteer. You'll get the option of creating account or not, later
+            in the process.
         </p>
         <ul>
             <li>
@@ -30,24 +42,15 @@
             </li>
             <li>
                 <p>
-                    If you ask us to, we'll send you an automated email every so often with news and information about
-                    events in your area.
-                </p>
-            </li>
-            <li>
-                <p>
                     We may also pass on the information you provide to the Labour party to help with their candidate
-                    selections
-                    and to help find supporters to sign candidates' nomination forms.
+                    selections and to help find supporters to sign candidates' nomination forms.
                 </p>
             </li>
         </ul>
         <p>
             The main purpose of this website is to track attendance at events, let people know what events are
-            happening,
-            and monitor how much campaigning is being done.
+            happening, and monitor how much campaigning is being done.
         </p>
-        <p>If you want to help us out, click Start.</p>
     </section>
 
     <section style="text-align: right">
